--- a/index.css
+++ b/index.css
@@ -1,8 +1,7 @@
 body {
     font-family: "Noto Sans", sans-serif;
-    width: 50%;
+    width: 960px;
     margin: auto;
-    /* border: 3px solid green; */
     background-color: #e6ecf0;
 }
 
@@ -23,15 +22,6 @@ h1 {
 	border-color: rgba(58, 90, 138, 0.603);
 	padding: 5px;
     margin: 20px;
-    /* font-weight: bold; */
-    font-size: 12px;
-	font-style: italic;
-	text-align: center;	
-    /* color: firebrick; */
-    /* display: block; */
-    /* margin-left: auto; */
-    /* margin-right: auto; */
-    /* width: fit-content; */
 }
 
 a:visited{
