--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Noto Sans", sans-serif;
-    width: 960px;
+    width: 50%;
     margin: auto;
     background-color: #e6ecf0;
 }
@@ -19,9 +19,46 @@ h1 {
 .parkour_intro_img {
     float:right;
 	border-style: solid;
-	border-color: rgba(58, 90, 138, 0.603);
+	border-color: rgba(58, 90, 138, 0.150);
 	padding: 5px;
     margin: 20px;
+}
+
+.menu {
+    position: absolute;
+    left: 0px;
+	padding: 5px;
+    margin: 20px;
+    margin-top: 100px;
+    margin-left: 5%;
+    border-style: solid;
+	border-color: rgba(58, 90, 138, 0.150);
+}
+
+.menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+}
+
+.menu li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+.menu li a.active {
+    background-color: #10284db7;
+    color: white;
+}
+
+/* Change the link color on hover */
+.menu li a:hover {
+    background-color: #555;
+    color: white;
 }
 
 a:visited{
