--- a/movies.css
+++ b/movies.css
@@ -1,5 +1,6 @@
 table, th, td {
-    border: 1px solid black;
+    border: solid rgba(58, 90, 138, 0.250);
     border-collapse: collapse;
+    border-width: 2px;
     padding: 15px;
 }
